--- a/HomeLibraryBlazor/Layout/Navbar.razor
+++ b/HomeLibraryBlazor/Layout/Navbar.razor
@@ -1,12 +1,12 @@
 <nav class="navbar">
     <div class="navbar-left">
-                <NavLink href="/library" class="nav-link" activeclassname="active"><h3 class="title">Library</h3></NavLink>
+        <NavLink href="/library" activeclassname="active"><h3 class="title">Library</h3></NavLink>
 
     </div>
     <div class="navbar-right">
-        <NavLink href="/library" class="nav-link" activeclassname="active">Library</NavLink>
-        <NavLink href="/wishlist" class="nav-link" activeclassname="active">Wishlist</NavLink>
-        <NavLink href="/about" class="nav-link" activeclassname="active">About</NavLink>
+        <NavLink href="/library" class="nav-link" >Library</NavLink>
+        <NavLink href="/wishlist" class="nav-link" >Wishlist</NavLink>
+        <NavLink href="/about" class="nav-link" >About</NavLink>
     </div>
 </nav>
 
@@ -36,16 +36,29 @@
     }
 
     .nav-link {
-        text-decoration: none;
-        color: #333;
-        font-weight: bold;
-    }
+    position: relative;
+    display: inline-block;
+    text-decoration: none;
+    color: #333;
+    font-weight: bold;
+    overflow: hidden;
+}
 
-    .nav-link.active {
-        color: #333;
-    }
+    .nav-link::after {
+    content: '';
+    position: absolute;
+    width: 0;
+    height: 2px;
+    display: block;
+    margin-top: 5px;
+    right: 0;
+    background: #007acc;
+    transition: width 0.4s ease, right 0.4s ease;
+}
 
-    .nav-link:hover {
-        color: #333;
-    }
+.nav-link:hover::after {
+    width: 100%;
+    right: 0;
+    left: 0;
+}
 </style>
